k8s/dev/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: api-gateway
  name: api-gateway
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "api-gateway-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: api-gateway
  template:
    metadata:
      labels:
        deployment.name: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: api-gateway:latest
        ports:
          - containerPort: 8080
