k8s/dev/auth.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: auth
  name: auth
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "auth-port"
      port: 8890
      targetPort: 8080
  selector:
    deployment.name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: auth
  template:
    metadata:
      labels:
        deployment.name: auth
    spec:
      containers:
      - name: auth
        image: auth:latest
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
