k8s/dev/feed.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: feed
  name: feed
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "feed-port"
      port: 8891
      targetPort: 8080
  selector:
    deployment.name: feed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: feed
  template:
    metadata:
      labels:
        deployment.name: feed
    spec:
      containers:
      - name: feed
        image: feed:latest
        ports:
          - containerPort: 8080
