k8s/dev/lit-read.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: lit-read
  name: lit-read
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "lit-read-port"
      port: 8892
      targetPort: 8080
  selector:
    deployment.name: lit-read
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lit-read
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: lit-read
  template:
    metadata:
      labels:
        deployment.name: lit-read
    spec:
      containers:
      - name: lit-read
        image: lit-read:latest
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
