k8s/dev/user-read.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: user-read
  name: user-read
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "user-read-port"
      port: 8895
      targetPort: 8080
  selector:
    deployment.name: user-read
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-read
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: user-read
  template:
    metadata:
      labels:
        deployment.name: user-read
    spec:
      containers:
      - name: user-read
        image: user-read:latest
        ports:
          - containerPort: 8080
