k8s/dev/ingress.yaml
# This Ingress exposes all routes served by the client router, this shouldn't have to exist but for some reason it does.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
          - path: /error-500
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
---
# This ingress exposes the services that we want to mess around with in development, they are not exposed in production
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /api/litsread
            pathType: Prefix
            backend:
              service:
                name: lit-read
                port:
                  number: 8080
          - path: /api/usersread
            pathType: Prefix
            backend:
              service:
                name: user-read
                port:
                  number: 8080
          - path: /api/userswrite
            pathType: Prefix
            backend:
              service:
                name: user-write
                port:
                  number: 8080
